@@ -1,5 +1,6 @@
 +++ version 0.12.3
 * jabber: fixed Facebook contacts groups being lost when upgrading from 0.10.x/0.11.x (beevvy)
+* build: dropped USE_X11_XFIXES CMake option which had been broken for a long time (beevvy)
 
 +++ version 0.12.2
 * core: fixed every new profile of Kadu being lost on Windows (regression since 0.11.x) (beevvy)
